code intelligence tools, chaos hardening, v0.2-beta polish